# steel_industry

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  environment.yml  pyproject.toml  setup.py
steel_industry/: .env  data_adapter_industry.py  parameter_map.py  postprocessing.py  processing_helpers.py
steel_industry/collections/steel_industry_test/: collection.json
steel_industry/collections/steel_industry_test_modified/: collection.json
steel_industry/datapackage/: datapackage.json
steel_industry/datapackage/data/elements/: bus.csv  helper_co2_delivery.csv  helper_co2_storage_permanent.csv  helper_generic_commodity.csv  helper_import_electricity_from_plug.csv  helper_pow_ind_grid_elec.csv  helper_sink_exo_steel.csv  ind_source_steel_scrap_iron.csv  ind_steel_blafu_1.csv  ind_steel_blafu_cc_1.csv  ind_steel_casting_1.csv  ind_steel_coke_plant_1.csv  ind_steel_dirred_1.csv  ind_steel_elefu_1.csv  ind_steel_hyddri_1.csv  ind_steel_oxyfu_1.csv  ind_steel_pellet_1.csv  ind_steel_sinter_1.csv  ind_steel_sponge_1.csv  x2x_delivery_hydrogen_pipeline_new_1.csv  x2x_delivery_hydrogen_pipeline_retrofit_1.csv  (+18 more)
steel_industry/old_structures/: Industriestruktur.xlsx  Industriestruktur_Hendrik.xlsx  Industriestruktur_alt.xlsx  SEDOS_Modellstruktur.xlsx  SEDOS_Modellstruktur_alt.xlsx
steel_industry/results/test/: results.csv
steel_industry/save/: datapackage.json
steel_industry/structures/: SEDOS_Modellstruktur.xlsx  SEDOS_Modellstruktur_sh_test.xlsx  SEDOS_Modellstruktur_sh_test_steel_repo.xlsx
tests/: test_requirements.txt
(+194 files in other folders)
