[tool.poetry]
name = "steel_industry"
version = "0.0.1dev"
description = "Models steel industry with the SEDOS reference dataset"
authors = [
  "Sabine Haas <sabine.haas@rl-institut.de>",
  "Felix Maurer <Felix.Maurer@rl-institut.de>"
]

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
data_adapter_oemof = { git = "https://github.com/sedos-project/data_adapter_oemof.git", branch = "dev"}
#data_adapter = { git = "https://git@github.com/sedos-project/data_adapter", branch = "dev"}
#oemof-tabular = { git = "https://git@github.com/oemof/oemof-tabular", branch = "dev"}
#oemof-industry = { git = "https://github.com/sedos-project/oemof.industry.git", branch = "main"}
#boto3 = "1.26.125"  # fix boto3 to fasten up dependency resolution
#python-dotenv = "^0.21.0"
#tsam = "^2.3.1"
#numpy = "<2"

[tool.poetry.dev-dependencies]
black = "20.8b1"
pytest = "^7.0.1"
coverage = "^6.3.2"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-bibtex"]

[tool.black]
exclude = '''
/(
    \
  |
    \.eggs
  | \.git
  | \.mypy_cache
  | meta/migrations
  | docs
  | .venv
)/
'''
max-line-length=100

[tool.isort]
profile = "black"
